# zashterminal

./: PKGBUILD  README.md  default.nix  install.sh  pyproject.toml
locale/: default.nix  en.po  pt.po  pyproject.toml
locale/src/zashterminal/: app.py
locale/src/zashterminal/settings/: config.py
locale/src/zashterminal/terminal/: manager.py
locale/usr/share/applications/: org.communitybig.zashterminal.desktop
src/zashterminal/: __main__.py  app.py  window.py
src/zashterminal/data/: command_manager_models.py
src/zashterminal/data/styles/: window.css
src/zashterminal/filemanager/: operations.py  tftp_server.py
src/zashterminal/sessions/: models.py  operations.py
src/zashterminal/settings/: config.py  manager.py
src/zashterminal/terminal/: manager.py  spawner.py
src/zashterminal/ui/: actions.py  menus.py  window_ui.py
src/zashterminal/ui/dialogs/: __init__.py  command_manager_dialog.py  session_edit_dialog.py  tftp_server_dialog.py
src/zashterminal/utils/: theme_engine.py
usr/share/applications/: org.leoberbert.zashterminal.desktop
